fix: update pagination alignment to use flex-end

--- a/packages/core/src/components/account/orders/MyAccountListOrders/MyAccountListOrdersTable/styles.scss
+++ b/packages/core/src/components/account/orders/MyAccountListOrders/MyAccountListOrdersTable/styles.scss
@@ -120,7 +120,7 @@
 
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   font-size: var(--fs-list-orders-table-pagination-text-size);
 
   [data-fs-button] {
